# schedule

./: .gitignore  .pre-commit-config.yaml  README.md  camp99.csv  config_default.conf  convert-2d-ods-to-wiki.py  csv2schedule.py  csv2schedule_34C3_DLF.py  csv2schedule_34C3_jugend-hackt.py  csv2schedule_camp99.py  csv2schedule_denog16.py  csv2schedule_deu.py  csv2schedule_jugendhackt.py  csv2schedule_sendezentrum_31C3.py  deploy.sh  filter_xcal.py  html2meta.py  html2schedule.py  import.py  pdf2csv_camp99.py  pyproject.toml  requirements.txt  schedule2wiki.py  schedule2wiki_allinone.py  schedule_36C3.py  schedule_38C3.py  schedule_39C3.py  schedule_39c3_shared.py  schedule_camp2019.py  schedule_camp2023.py  schedule_divoc.py  schedule_gpn.py  schedule_jev22.py  schedule_json2xml.py  schedule_rC3.py  schedule_rC3_21.py  schedule_transform.py  sendezentrum_31C3.csv  validate_rC3.py  wiki2schedule.py  (+9 more)
.github/workflows/: main.yml  publish.yml  validate.yml
archive/: convert-3d-csv-KoMoNa-to-wiki.py  csv2schedule_34C3_DLF.py  schedule_camp2019.py  wiki2schedule_33C3.py  wiki2schedule_34C3.py  wiki2schedule_35C3.py  wiki2schedule_asm16.py  wiki2schedule_camp15.py
example_deu/: schedule-example.ods  schedule-example.xlsx
locations/: cch.py
tools/: csv2schedule_deu.py  filter_xcal.py  schedule_divoc.py  schedule_json2xml.py  validate_rC3.py  voc  wikitable2schedule.py
tools/archive/: wiki2schedule_35C3.py
validator/: README.md  schedule.xml.xsd  test.sh  validate_schedule_xml.sh
validator/json/: schema.json  schema2.json  validate_schedule_json.sh
validator/json/examples/: frab-camp2019.json  hub-schedule2.json  invalid-example.json  pretalx-democon.json  pretalx-rc3.json
validator/submission-json/: person.json  schema.json  submission.json
validator/submission-json/examples/: frab-event.json  pretalx-submission.json
validator/web_validator/: Gemfile  config.ru  webapp.rb
validator/web_validator/views/: index.haml  layout.haml
validator/xsd/: schedule-without-person.xml.xsd  schedule.xml.xsd  validate_schedule_xml.sh
voc/: README.md  __init__.py  c3data.py  event.py  generic.py  git.py  logger.py  pretalx.py  rc3hub.py  room.py  schedule.py  schedulexml.py  tools.py  voctoimport.py  webcal.py  webcal2.py
