[tool.poetry]
name = "schedule"
version = "1.0.0"
description = ""
authors = ["Andreas Hubel <andi@muc.ccc.de>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
six = "^1.16.0"
lxml = "^4.9.1"
gql = ">=3.0.0a5"
aiohttp = ">=3.7.4.post0"
GitPython = "^3.1.30"
bs4 = "^0.0.1"
html5lib = "^1.1"
ics = "^0.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
Flake8-pyproject = "^1.2.2"

[tool.flake8]
exclude = [".venv"]
ignore = ["E501"]
max-line-length = 150
per-file-ignores = ["voc/__init__.py:F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"